# gomall

./: .gitignore  Makefile  README.md  go.mod  go.sum  go.work  handler.go  main.go  readme.md
agent/: ARCHITECTURE.md  pyproject.toml  run_product_agent.sh
agent/auto_order_agent/: README.md  __init__.py  api_client.py  graph.py  main.py  state.py  tools.py
agent/product_listing_agent/: README.md  __init__.py  api_client.py  graph.py  main.py  state.py  test_agent.py  test_api.py  tools.py
app/api/: .gitignore  go.mod  go.sum  main.go  router.go  router_gen.go
app/auth/: go.mod  go.sum
app/cart/: go.mod  go.sum  handler.go  kitex_info.yaml  main.go
app/checkout/: go.mod  go.sum  handler.go  main.go
app/hertz_gateway/: go.mod  go.sum  main.go
app/order/: .env.example  go.mod  go.sum  handler.go  kitex_info.yaml  main.go  readme.md
app/payment/: go.mod  go.sum  handler.go  kitex_info.yaml  main.go
app/product/: go.mod  go.sum  handler.go  kitex_info.yaml  main.go
app/user/: go.mod  go.sum  handler.go  handler_test.go  main.go
biz/utils/: snowflake.go
common/: go.mod  go.sum
common/clientsuite/: client.go
common/constant/: error.go  role.go
common/crypt/: crypt.go
common/errs/: errs.go  errs_test.go
common/uniqueid/: uniqueid.go
handler/order/: order.go
idl/: auth.proto  cart.proto  checkout.proto  order.proto  payment.proto  product.proto  user.proto
proto/: order.proto
rpc_gen/: go.mod  go.sum
scripts/: Makefile  run_api_tests.sh  run_checkout_flow.sh  start_services.sh
sql/: mock_product.sql  order.sql  product.sql  user.sql
(+346 files in other folders)
